<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ReservationActivity">

    <Button
        android:id="@+id/button_reservation_activity_start_date"
        style="@style/ButtonReservationActivityStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_reservation_activity_start_date_text"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_reservation_activity_finish_date"
        style="@style/ButtonReservationActivityStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_reservation_activity_finish_date_text"
        app:layout_constraintTop_toBottomOf="@id/button_reservation_activity_start_date" />

    <EditText
        android:id="@+id/edit_text_reservation_activity_security_code"
        style="@style/EditTextReservationActivityStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_text_reservation_activity_security_code_text"
        app:layout_constraintTop_toBottomOf="@id/button_reservation_activity_finish_date" />

    <EditText
        android:id="@+id/edit_text_reservation_activity_place"
        style="@style/EditTextReservationActivityStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_text_reservation_activity_place_text"
        app:layout_constraintTop_toBottomOf="@id/edit_text_reservation_activity_security_code" />

    <Button
        android:id="@+id/button_reservation_activity_save"
        style="@style/ButtonReservationActivityStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/button_reservation_activity_margin_bottom"
        android:text="@string/button_reservation_activity_save_text"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
